# robotics_lorebook

./: .gitignore  .gitmodules  C2R.npy  README.md  cameras.py  env.py  lorebook.txt  lorebook_pruning.py  main.py  main_native_rag.py  main_utils.py  prompt.txt  pyproject.toml  real_main.py  server.py  tmp_test.py  tmp_vis_demo.py  unified_main.py  user_study_runner.py
baselines/: droc_rag.py
baselines/pi0/: cameras_subscriber.py  deploy.py  pi0.py  preprocess_lerobot.py  train_pi0.sh  utils.py
classifier/: __init__.py
config/prompts/: llm_decomp_gem.yml  llm_decomposer.yml  llm_dict_gem.yml  llm_dictionary.yml  llm_rag.yml  llm_unified.yml  llm_unified_function_store.yml
config/scene/: banana.yml  buttonmicrowave.yml  buttonstove.yml  cleanuptable.yml  coffee.yml  cooking.yml  emptycabinet.yml  microwave.yml  seasoning.yml
config/scene/user_study/: clean_up_the_table.yml  close_the_bottle.yml  cook_the_food_using_the_microwave.yml  cook_the_food_using_the_stove.yml  empty_the_cabinet.yml  make_coffee.yml  open_fridge.yml  put_food_in_fridge.yml  put_the_cube_away.yml  put_the_food_away.yml  put_the_food_in_the_microwave.yml  put_the_food_in_the_pan_and_place_it_in_the_microwave.yml  put_the_trash_away.yml  season_the_food.yml
config/tasks/: og_tasks.yml  tasks.yml
data/: lorebook.pkl  lorebook_double.pkl  lorebook_double_pruned.pkl  lorebook_generic.pkl  lorebook_hierarchical.json  lorebook_pruned.pkl
llm/: llm.py
src/: shared.py  utils.py
src/cameras/: __init__.py  calibrate_C2R.py  orbbec.py  utils.py
src/classifier/: open_vocab_classifier.py
src/env/: __init__.py  env.py  real_env.py
src/franka_panda/: __init__.py  franka.py  robot.py  test_gripper.py
src/llm/: __init__.py  llm.py  rag.py
src/objects/: __init__.py  objects.py  xml2urdf.py
src/objects/collab_objects/: cabinet.urdf  (+2 more)
templates/: index.html
user_study_data/next/: config.yml
(+5 files in other folders)
