[project]
name = "robotics-lorebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "google-generativeai>=0.8.6",
    "imageio[ffmpeg]>=2.37.2",
    "matplotlib>=3.10.8",
    "numpy==2.0.2",
    "ollama>=0.6.1",
    "openai>=2.17.0",
    "pybullet>=3.2.7",
    "pynput>=1.8.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "termcolor>=3.3.0",
    "uvicorn>=0.41.0",
]
