[project]
name = "robotics-lorebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "google-genai>=1.64.0",
    "google-generativeai>=0.8.6",
    "h5py>=3.15.1",
    "imageio[ffmpeg]>=2.37.2",
    "lang-sam",
    "matplotlib>=3.10.8",
    "natsort>=8.4.0",
    "numpy==2.0.2",
    "ollama>=0.6.1",
    "open3d>=0.19.0",
    "openai>=2.17.0",
    "opencv-python>=4.13.0.92",
    "pybullet>=3.2.7",
    "pynput>=1.8.1",
    "pyorbbecsdk2>=2.0.15",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "termcolor>=3.3.0",
    "uvicorn>=0.41.0",
]

[tool.uv.sources]
lang-sam = { git = "https://github.com/luca-medeiros/lang-segment-anything.git" }
